Finalizando menu navegação

--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
         </div>
       </header>
       <main>
-          <section>
+          <div class="menu-lateral">
+            <h3>MENU</h3>
+            <div class="menu-lateral-editor">
+              <div class="icone-editor">
+                <img src="assets/img/editorDeCodigo.png" alt="foto do sinal maior e menor que" >
+              </div>
+              <a href="#" class="texto-editor">Editor de códigos</a>
+            </div>
               
-          </section>
+            <div class="menu-lateral-comunidade">
+              <div class="icone-menu">
+                <img src="assets/img/fotoComunidade.png" alt="foto de icone da comunidade" class="imagem-comunidade">
+              </div>
+              <a href="#" class="texto-comunidade">Comunidade</a>
+            </div>
+             
+          </div>
       </main>
     </div>
   </body>
